--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">jogo eletronico</string>
+    <string name="titulo">Titulo:</string>
+    <string name="genero">Gênero:</string>
+    <string name="plataforma">Plataforma:</string>
+    <string name="modos">Modos:</string>
+    <string name="produtora">Produtora</string>
+    <string name="lancamento">Lançamento:</string>
+    <string name="foto">Foto:</string>
+    <string name="sair">Sair</string>
+    <string name="limpar">Limpar</string>
+    <string name="cadastrar">Cadastrar</string>
+    <string name="multiplayer">Multiplayer</string>
+    <string name="singleplayer">Singleplayer</string>
 </resources>
