fim do design da primeira tela

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="genero">Gênero:</string>
     <string name="plataforma">Plataforma:</string>
     <string name="modos">Modos:</string>
-    <string name="produtora">Produtora</string>
+    <string name="produtora">Produtora:</string>
     <string name="lancamento">Lançamento:</string>
     <string name="foto">Foto:</string>
     <string name="sair">Sair</string>
