finalização do projeto.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="cadastrar">Cadastrar</string>
     <string name="multiplayer">Multiplayer</string>
     <string name="singleplayer">Singleplayer</string>
+    <string name="voltar">Voltar</string>
 </resources>
